--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     
     <audio id="bg-music" loop>
-        <source src="Graze the Roof (Roof) - Plants vs. Zombies.mp3" type="audio/mp3">
+        <source src="Pixel" type="audio/mp3">
         Browser kamu tidak mendukung elemen audio.
     </audio>
     <button id="musicBtn">🔊</button>
